# typeid_suffix

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
proptest-regressions/: lib.txt
src/: encoding.rs  errors.rs  lib.rs  traits.rs  typeid_suffix.rs  uuid_other.rs  uuidv7.rs  versions.rs
tests/: serde_integration_test.rs  specification_test_vectors.rs  unit_tests_redux.rs
tests/macros/: mod.rs
